--- a/aboutme.html
+++ b/aboutme.html
@@ -261,7 +261,7 @@
                         <span class="text sketch">잘 다룰 수 있는<span class="em">&nbsp;&nbsp;상</span></span>
                       </li>
                       <li class="graph-item">
-                        <span>Pigma</span>
+                        <span>Figma</span>
                         <div class="progress">
                           <div class="line"></div>
                           <div class="line-on pigma"></div>
